--- a/feed.css
+++ b/feed.css
@@ -1,8 +1,6 @@
 @font-face {
-    font-family: 'Dillan';
+    font-family: 'Poppins', sans-serif;
     /* Nome que você dará à fonte */
-    src: url('./MADEDillan-Regular.otf') format('truetype');
-    /* Caminho para o arquivo da fonte */
     font-weight: normal;
     /* Ajuste se necessário */
     font-style: normal;
@@ -19,7 +17,7 @@
 
 body,
 html {
-    font-family: 'Dillan', sans-serif;
+    font-family: 'Poppins', sans-serif;
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
