🎨 style: correção das url da fonte

--- a/feed.css
+++ b/feed.css
@@ -5,6 +5,7 @@
     /* Ajuste se necessário */
     font-style: normal;
     /* Ajuste se necessário */
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 }
 
 /* Reset e estilos gerais */
